[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/prot/weap_rockets.png" type="Texture" id=1]
[ext_resource path="res://sprites/prot/player-arms.png" type="Texture" id=2]
[ext_resource path="res://scripts/RocketLauncher.gd" type="Script" id=3]
[ext_resource path="res://sounds/pistol_shot.ogg" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "shoot"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 3.605, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -8, 0 ), Vector2( 1, 0 ), Vector2( 0, 0 ) ]
}

[node name="RocketLauncher" type="Node2D"]
script = ExtResource( 3 )

[node name="ArmParent" type="Node2D" parent="."]

[node name="Gun" type="Sprite" parent="ArmParent"]
position = Vector2( 34.2843, 6.54055 )
texture = ExtResource( 1 )

[node name="Arm" type="Sprite" parent="ArmParent"]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ArmParent"]
anims/shoot = SubResource( 1 )

[node name="GunshotSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
pitch_scale = 0.46

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
